# ByteStreamCpp

./: .gitignore  CMakeLists.txt  README.md
ByteStreamCppLib/: CMakeLists.txt
ByteStreamCppLib/include/: ByteStreamReader.h  ByteStreamWriter.h  Helper.h  Types.h
src/: Random.cpp  Runner.cpp  main.cpp
src/include/: ByteStreamReader.h  ByteStreamWriter.h  Random.h  Runner.h  Types.h
